--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -13,7 +13,7 @@ $light: #787879;
     color: #91e77f;
 }
 
-
+//Header
 .top_header{
     height: 25px;
 
@@ -31,16 +31,41 @@ $light: #787879;
     border-bottom: 4px solid $accent;
 }
 
+//Jumbo
 .jumbotron{
     height: 400px;
     background-image: url(../img/jumbotron.jpg);
     background-size: cover;
 }
 
+.blue_banner{
+    height: 60px;
+
+    position: relative;
+
+    .cover{
+        position: absolute;
+        top: -160px;
+        left: 0;
+    }
+}
+
+//Comics
+.container{
+    position: relative;
+
+    .current_series{
+        position: absolute;
+        top: -28px;
+        left: -6px;
+    
+    }
+}
 .card img{
     max-height: 160px;
 }
 
+//Footer
 .footer_top{
     background-image: url('../img/dc-logo-bg.png'), url('../img/footer-bg.jpg');
     background-repeat: no-repeat, repeat-x;
